--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="topic">test/topic</string>
     <string name="shared_prefs">SHARED_PREFS</string>
     <string name="ble_uuid">b180438b-88a9-4e8c-abfa-da50fbe5188e</string>
 </resources>
