--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
         completions."
     </string>
     <string name="topic">test/topic</string>
+    <string name="server_url">tcp://192.168.43.112:1883</string>
     <string name="shared_prefs">SHARED_PREFS</string>
     <string name="ble_uuid">b180438b-88a9-4e8c-abfa-da50fbe5188e</string>
 </resources>
